<resources>
    <string name="app_name">Befit App</string>
    <string name="started_title">Bem vindo</string>
    <string name="started_subtitle">Informe seu email e senha.</string>
    <string name="started_splash_subtitle">Entre se ja possuir uma conta.<br> </br> Cadastre-se se for sua primeira vez</string>
    <string name="illustration_logo">Amado logo da Befit!</string>
    <string name="btn_login">ENTRAR</string>
    <string name="btn_register">CADASTRE-SE</string>
    <string name="login_email">Email</string>
    <string name="login_password">senha</string>
    <string name="login_senha">senha</string>
    <string name="started_subtitle_register">Insira seus dados para criar sua conta</string>
    <string name="login_confirmar_senha">confirmar senha</string>
    <string name="btn_confirmar">CONFIRMAR DADOS</string>
    <string name="home_title">oiii</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="login_title">Login no app</string>

    <string name="cadastro_sub_title"> <font color="white">Ainda não tenho uma conta</font> <font color="#3918D9"><b>Registre-se </b></font>
    </string>

    <string name="login_sub_title"> <font color="white">Já tenho uma conta</font> <font color="#3918D9"><b>Login </b></font>
    </string>
    <string name="cadastro_title">Criar uma conta</string>
    <string name="registro_subtitle">insira seus dados para criar uma conta</string>
    <string name="register_user">Usuário</string>
    <string name="register_confirm_senha">Confirmar senha</string>
    <string name="rating">Avaliação:  %1$.1f</string>
    <string name="google_maps_key">AIzaSyC9OBoZmZKvEq_A2usOPCi68Shx3AFKUDc</string>
    <string name="hello_blank_fragment">blank fragment</string>
    <string name="like_buttom">like_buttom</string>
    <string name="nome_usuario">Default Usuario</string>
    <string name="academias_proximas">Academias próximas:</string>


    <string name="lgpd_term"> <br> </br> <p> <b> Prezado usuário, Agradecemos por utilizar nossos serviços.</b></p>
          <br> </br>Queremos informá-lo que estamos em conformidade com a Lei Geral de Proteção de Dados Pessoais (LGPD) e nos preocupamos com a proteção dos seus dados pessoais.
        Como empresa, nos comprometemos em coletar apenas os dados necessários para fornecer nossos serviços e utilizá-los de forma responsável e segura.
        Além disso, garantimos que seus dados pessoais serão tratados em conformidade com as leis e regulamentos aplicáveis.
        Nosso objetivo é fornecer um ambiente seguro e confiável para que você possa utilizar nossos serviços com tranquilidade.
        Para isso, implementamos medidas de segurança apropriadas para proteger seus dados pessoais contra possíveis violações.
         <br> </br>
        Caso deseje obter mais informações sobre como coletamos e tratamos seus dados pessoais, ou para exercer seus direitos previstos na LGPD, como acesso, correção, exclusão e portabilidade de dados, você pode entrar em contato com nossa equipe de suporte ao cliente.
          <br> </br>
        Agradecemos pela sua confiança em nossos serviços e estamos sempre à disposição para esclarecer qualquer dúvida que possa surgir. Atenciosamente, Equipe de Proteção de Dados Pessoais.</string>
    <string name="ingrediente_1">Ingrediente 1</string>
    <string name="porcao_15">porcao 15</string>
    <string name="dieta_example">DIETA EXAMPLE</string>
    <string name="nome_da_activity">Nome da activity</string>
    <string name="calorias">Calorias</string>


</resources>