<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:background="@color/white"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/imageView2"
            style="@style/BackGroundImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="411dp"
            android:layout_height="542dp"
            android:src="@drawable/img_background_logo"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.145"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/logo_black"
            android:layout_width="296dp"
            android:layout_height="118dp"

            android:src="@drawable/logo_black"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.057" />

        <TextView
            android:id="@+id/started_title"
            style="@style/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/started_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_black" />

        <TextView
            android:id="@+id/started_subtitle_plash"
            android:layout_width="237dp"
            android:layout_height="73dp"
            android:layout_marginBottom="140dp"
            android:text="@string/started_splash_subtitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/loginButton"
            android:layout_width="337dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="@color/primary_color"
            android:text="@string/btn_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/started_subtitle_plash"
            app:layout_constraintVertical_bias="0.865" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="337dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            android:background="@drawable/bg_register_button"
            android:textColor="@color/primary_color"
            android:text="@string/btn_register"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
